# sd-mecha

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  convert_ckpt_to_safetensors.py  flatten_model_config.py  mkdocs.yml  profile_output.prof  pyproject.toml  requirements-scripts.txt  requirements.txt  stats.txt
.github/workflows/: release.yaml
builtin_models/: __main__.py  disable_init.py  model_config_autodetect.py  nn_module_config.py  paths.py  script_main.py  script_runner.py  script_venvs.py  stable_diffusion_components.py
builtin_models/scripts/: sd1_ldm_base.py  sdxl_sgm_base.py
docs/: README.md
docs/0-introduction/: README.md
docs/0-todo-listing/: README.md
docs/1-merge-methods/: README.md
docs/1-recipes/: README.md
docs/2-user-defined-merge-methods/: README.md
docs/guide/: 0-introduction.md  1-typical-use-cases.md  2-user-defined-merge-methods.md  3-merge-methods-listing.md  README.md  index.md
example/: basic_merge.py
examples/: add_perpendicular.py  anchored_tridelta_merge.py  basic_merge.py  basic_merge_sdxl.py  binomial_dropout_merge.py  custom_merge_method.py  deserialize_recipe.py  in_memory_merge.py  incompatible_fusion.py  lora_merge.py  lora_merge_sd1.py  lora_merge_sdxl.py  n_average.py  recipe_deserialize.py  recipe_serialize.py  rotate.py  sdxl_merge.py  serialize_recipe.py  split_unet_text_encoder.py  ssd-test.py  structural_config.py  test.py  ties_add_difference.py
examples/recipes/: incompatible_fusion.mecha  incompatible_fusion_sd15.mecha  test_split_unet_text_encoder.mecha  test_weighted_sum.mecha  weighted_sum.mecha
examples/unit_test/: unit_test_ties.py
guide/: README.md
guide/0-introduction/: README.md
guide/1-typical-use-cases/: README.md
model_configs/: __main__.py  disable_init.py  lycoris_config.py  nn_module_config.py  paths.py  script_main.py  script_runner.py  script_venvs.py  stable_diffusion_components.py
scripts/: convert_ckpt_to_safetensors.py  dump_keys.py  dump_keys_gui.py  yaml_from_safetensors.py
sd_mecha/: __init__.py  __main__.py  ast_nodes.py  builtin_model_archs.py  builtin_model_types.py  builtin_model_versions.py  conversion.py  extensions.py  graph_finalization.py  helpers.py  hypers.py  keys_map.py  lycoris_configs.py  merge_context.py  merge_method_wrappers.py  merge_methods.py  merge_scheduler.py  merge_space.py  merging.py  model_config.py  model_detection.py  module.py  recipe_executor.py  recipe_merger.py  recipe_merging.py  recipe_nodes.py  recipe_serializer.py  serialization.py  streaming.py  typing_.py  unit_test_geom_median.py  user_error.py  weight.py  weight.pyi
sd_mecha/hypers/: sd15.py  (+2 more)
sd_meh/: merge.py  merge_methods.py  presets.py  utils.py
test/: poc_della.py  unit_test_della.py  unit_test_dropout.py  unit_test_geom_median.py  unit_test_modelstock.py  unit_test_n_average.py  unit_test_ties.py
tests/: test_merge_context.py
(+133 files in other folders)
