[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-mecha"
version = "0.0.28"
description = "State dict recipe merger"
readme = "README.md"
authors = [{ name = "ljleb" }]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "numpy",
    "safetensors",
    "tqdm",
    "scipy",
    "fuzzywuzzy",
    "python-Levenshtein",
    "PyYAML",
]

[tool.setuptools]
packages = [
    "sd_mecha",
    "sd_mecha.merge_methods",
    "sd_mecha.extensions",
    "sd_mecha.lora",
    "sd_mecha.models",
]

[tool.setuptools.package-data]
"sd_mecha.lora" = ["*.json"]
"sd_mecha.models" = ["*.yaml", "*.txt"]

[project.urls]
Homepage = "https://github.com/ljleb/sd-mecha"
Issues = "https://github.com/ljleb/sd-mecha/issues"
